# mymprpc

./: .gitignore  2026-6-10-log.txt  CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h
example/callee/: CMakeLists.txt  FriendService.cc  UserService.cc
example/caller/: CMakeLists.txt  CallFriendService.cc  CallUserService.cc
simple_logger/: Logger.cc  Logger.h
src/: CMakeLists.txt  MprpcApplication.cc  MprpcChannel.cc  MprpcConfig.cc  MprpcController.cc  MprpcProvider.cc  RpcProvider.cc  rpcheader.pb.cc  zookeeperUtil.cc
src/include/: LockQueue.h  Logger.h  MprpcApplication.h  MprpcChannel.h  MprpcConfig.h  MprpcController.h  MprpcProvider.h  RpcProvider.h  rpcheader.pb.h  zookeeperUtil.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
