set(USER_SRC_LIST CallUserService.cc ../user.pb.cc)
set(FRIEND_SRC_LIST CallFriendService.cc ../friend.pb.cc)
add_executable(user_consumer ${USER_SRC_LIST})
add_executable(friend_consumer ${FRIEND_SRC_LIST})
target_link_libraries(user_consumer mymprpc protobuf)
target_link_libraries(friend_consumer mymprpc protobuf)